force-app/main/default/objects/CTRDependentPicklist__mdt.object
<CustomObject>
    <fields>
        <fullName>AccountAssignmentGroup__c</fullName>
        <label>Account Assignment Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <label>01 Domestic Revenues</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>02 Foreign Revenues</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <label>03 Affiliate Comp Revenues</label>
                </value>
                <value>
                    <fullName>04</fullName>
                    <label>04 Business Area Revenu</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AccountGroup__c</fullName>
        <label>Account Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TRDL</fullName>
                </value>
                <value>
                    <fullName>TRDF</fullName>
                </value>
                <value>
                    <fullName>TOPG</fullName>
                </value>
                <value>
                    <fullName>ZSHP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CreditCondition__c</fullName>
        <label>Credit Condition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open Account</fullName>
                </value>
                <value>
                    <fullName>Open Account With Collateral</fullName>
                </value>
                <value>
                    <fullName>L/C</fullName>
                </value>
                <value>
                    <fullName>Domestic L/C</fullName>
                </value>
                <value>
                    <fullName>Cash in Advance</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>THB</fullName>
                    <label>Baht (THB)</label>
                </value>
                <value>
                    <fullName>USD</fullName>
                    <label>US Dollar (USD)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DistributionChannel__c</fullName>
        <label>Distribution Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                    <label>10-Domestic Major Oil</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>11-Domestic Third Party</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>12-Domestic TOP Group</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>13-Domestic Other</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <label>14-Domestic User/Blnder</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <label>15-Domestic Trade/Resel</label>
                </value>
                <value>
                    <fullName>16</fullName>
                    <label>16-Domestic</label>
                </value>
                <value>
                    <fullName>17</fullName>
                    <label>17-Free Tax Zone</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <label>20-Export Direct</label>
                </value>
                <value>
                    <fullName>21</fullName>
                    <label>21-Export Indirect</label>
                </value>
                <value>
                    <fullName>22</fullName>
                    <label>22-Export Free Zone</label>
                </value>
                <value>
                    <fullName>23</fullName>
                    <label>23-Exp Direct Trading</label>
                </value>
                <value>
                    <fullName>24</fullName>
                    <label>24-Exp Indirect Trading</label>
                </value>
                <value>
                    <fullName>25</fullName>
                    <label>25-Export</label>
                </value>
                <value>
                    <fullName>26</fullName>
                    <label>26-Export Direct Broker</label>
                </value>
                <value>
                    <fullName>30</fullName>
                    <label>30-Import (VAT)</label>
                </value>
                <value>
                    <fullName>31</fullName>
                    <label>31-Import Indirect(VAT)</label>
                </value>
                <value>
                    <fullName>32</fullName>
                    <label>32-Import (Non-VAT)</label>
                </value>
                <value>
                    <fullName>33</fullName>
                    <label>33-Import Indirect(NonV</label>
                </value>
                <value>
                    <fullName>IC</fullName>
                    <label>IC-Intra-comp. Transfer</label>
                </value>
                <value>
                    <fullName>01</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                    <label>Thai</label>
                </value>
                <value>
                    <fullName>E</fullName>
                    <label>English</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PaymentGuaranteeProcedure__c</fullName>
        <label>Payment Guarantee Procedure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0001</fullName>
                    <label>0001 (Don&apos;t Use) Letters of credit</label>
                </value>
                <value>
                    <fullName>0002</fullName>
                    <label>0002 (Don&apos;t Use) Payment cards</label>
                </value>
                <value>
                    <fullName>ZA01</fullName>
                    <label>ZA01 Low Risk (Open)</label>
                </value>
                <value>
                    <fullName>ZA02</fullName>
                    <label>ZA02 Low Risk (Parent Guarantee)</label>
                </value>
                <value>
                    <fullName>ZB01</fullName>
                    <label>ZB01 Medium Risk (Credit Limit)</label>
                </value>
                <value>
                    <fullName>ZB02</fullName>
                    <label>ZB02 Medium Risk (Credit Limit Group)</label>
                </value>
                <value>
                    <fullName>ZC01</fullName>
                    <label>ZC01 High Risk (Advance Payment)</label>
                </value>
                <value>
                    <fullName>ZC02</fullName>
                    <label>ZC02 High Risk (Collateral)</label>
                </value>
                <value>
                    <fullName>ZC03</fullName>
                    <label>ZC03 High Risk (Export Cash)</label>
                </value>
                <value>
                    <fullName>ZC04</fullName>
                    <label>ZC04 High Risk (Export L/C)</label>
                </value>
                <value>
                    <fullName>ZC05</fullName>
                    <label>ZC05 High Risk (Cash&amp;Credit)</label>
                </value>
                <value>
                    <fullName>ZC06</fullName>
                    <label>ZC06 High Risk (Credit Limit)</label>
                </value>
                <value>
                    <fullName>ZC07</fullName>
                    <label>ZC07 High Risk (Cash)</label>
                </value>
                <value>
                    <fullName>ZI01</fullName>
                    <label>ZI01 TOP Group</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Crude</fullName>
                </value>
                <value>
                    <fullName>Petroleum Products</fullName>
                </value>
                <value>
                    <fullName>Petrochemical Products</fullName>
                </value>
                <value>
                    <fullName>Lube Base Products</fullName>
                </value>
                <value>
                    <fullName>LABIX Products</fullName>
                </value>
                <value>
                    <fullName>Other Products</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesOrganization__c</fullName>
        <label>Sales Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1100</fullName>
                </value>
                <value>
                    <fullName>1300</fullName>
                </value>
                <value>
                    <fullName>1400</fullName>
                </value>
                <value>
                    <fullName>1700</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TaxClassification__c</fullName>
        <label>Tax Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>0 : Tax Excempt</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>1 : Liable for Taxes</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>2 : Free Tax Zone</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>3 : Non Tax</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General View</fullName>
                </value>
                <value>
                    <fullName>Sales View</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CTRDependentPicklist</label>
</CustomObject>